--- a/src/components/input/_input.scss
+++ b/src/components/input/_input.scss
@@ -32,3 +32,9 @@
        cursor: pointer;
    }
 }
+.input-error {
+    color: $hr_error;
+    margin: 0px;
+    margin-top:4px;
+    font-size: 12px;
+}
