--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,7 +11,10 @@
 @import '../components/recruitmentcard/recruitmentCard';
 @import '../components/hrCard/hrCard';
 @import '../components/calendar/calendar';
+@import '../components/button/button';
+@import '../components/table/table';
 
 
 //Screens
 @import '../screens/home/home';
+@import '../screens/login/login';
