--- a/src/components/recruitmentcard/_recruitmentCard.scss
+++ b/src/components/recruitmentcard/_recruitmentCard.scss
@@ -1,5 +1,21 @@
 .recruitment-card {
+    
     background-color: cadetblue;
     border-radius: 10px;
     height: 75%;
+    display: flex;
+    flex-direction: column;
+   .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 4px;
+    padding: 0px 16px;
+    
+    .recruitment-btn {
+        width: 60px;
+        height: 30px;
+        margin-top:2px;
+    }
+   }
 }
