--- a/src/screens/login/_login.scss
+++ b/src/screens/login/_login.scss
@@ -1,3 +1,76 @@
 .login {
-    
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: login-animation 1s ease-in-out;
+    .form-container {
+        width: 30%;
+        padding: 0px;
+        border: 1px solid $hr_gray4;
+        border-radius: 24px;
+        height: 60%;
+      //animation: form-container-animation 1s ease-in-out;
+    }
+    .header-band {
+        background: $hr_gray5;
+        padding: 24px;
+        border-top-left-radius: 24px;
+        border-top-right-radius: 24px;
+        h3{
+            margin:0px;
+            color:$hr_white;
+            text-align: center;
+        }
+    }
+    .form {
+        padding: 24px;
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .login-input {
+        margin-top: 8px;
+        opacity: 0;
+        animation: input-feild-animation 1s ease-in-out;
+        animation-delay: 0.7s;
+        animation-fill-mode: forwards;
+    }
+    .login-button {
+        width:100%;
+        margin-top:16px;
+    }
+
+}
+
+@keyframes login-animation {
+    from {
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+// @keyframes form-container-animation {
+//     from{
+//        position: relative;
+//     }
+//     to {
+        
+//         position: absolute;
+//         left:50%;
+//     }
+// }
+
+@keyframes input-feild-animation {
+    from{
+        width: 0%;
+        opacity: 0;
+    }
+    to{
+      width: 94%;
+      opacity: 1;
+    }
 }
